= Changelog

== Release 1.3.11

* CHANGED: Standardized #status property for the following parsers (#5)
  * whois.aero
  * whois.aeda.net.ae
  * whois.audns.net.au
  * whois.cat
  * whois.cctld.uz
  * whois.co.ug
  * whois.denic.de
  * whois.dk-hostmaster.dk
  * whois.dns.be
  * whois.dns.lu
  * whois.dns.pt
  * whois.domainregistry.ie
  * whois.in.ua
  * whois.jprs.jp
  * whois.net.ua
  * whois.nic-se.se
  * whois.nic.am
  * whois.nic.asia
  * whois.nic.at
  * whois.nic.coop
  * whois.nic.fr
  * whois.nic.ht
  * whois.nic.kz
  * whois.nic.la
  * whois.nic.mu
  * whois.nic.nu
  * whois.nic.org.uy
  * whois.nic.travel
  * whois.nic.uk
  * whois.nic.ve
  * whois.norid.no
  * whois.register.bg
  * whois.registry.in
  * whois.rotld.ro
  * whois.srs.net.nz

* FIXED: Property cache is missing for some parsers (#18)

* FIXED: In some circumstances the whois.jprs.js parser may raise 
  an Argument out of range error trying to parse the #updated_on property.

* FIXED: The whois.nic.uk parser fails to parse #nameservers when
  the domain is suspended.


== Release 1.3.10

* SERVER: Removed the .fed.us TLD definition.

* NEW: Added simple .je TLD parser (whois.je).

* NEW: Added simple .ke TLD parser (whois.kenic.or.ke).

* NEW: Added simple .li TLD parser (whois.nic.li).

* CHANGED: Force whois.denic.de WHOIS output to be always UTF-8,
  otherwise some queries will fail (#51)

    $ ruby-whois hosteurope.de
    % Error: 55000000013 Invalid charset for response

* CHANGED: Standardized whois.nic.gov #status property.


== Release 1.3.9

* SERVER: Sync definitions with Debian whois 5.0.8:
    * Updated the .bb, .ps, and .lk TLD definitions.

* NEW: Added simple .dz TLD parser (whois.nic.dz).

* NEW: Added simple .fi TLD parser (whois.ficora.fi).

* NEW: Added simple .fj TLD parser (whois.usp.ac.fj).

* NEW: Added simple .gg TLD parser (whois.gg).

* NEW: Added simple .gs TLD parser (whois.nic.gs).

* NEW: Added simple .il TLD parser (whois.isoc.org.il).
