@@ -1,5 +1,10 @@
 = Changelog
 
+== master
+
+* FIXED: Fixed Unknown status `CLIENT DELETE PROHIBITED' for whois.registry.in.
+
+
 == Release 1.3.11
 
 * CHANGED: Standardized #status property for the following parsers (#5)
